--- a/CP Assignment 1/Base.lproj/Main.storyboard
+++ b/CP Assignment 1/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                         <rect key="frame" x="137" y="441" width="46" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <connections>
-                                            <segue destination="J1C-RC-eWN" kind="modal" id="WaF-W8-AjJ"/>
+                                            <segue destination="144-hB-5oD" kind="modal" id="4gX-NB-5NK"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Y2c-Oe-e7X">
@@ -64,12 +64,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DHf-0P-Xd3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="534" y="214"/>
+            <point key="canvasLocation" x="554" y="260"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XKA-4g-3A7">
             <objects>
-                <navigationController navigationBarHidden="YES" id="cb5-Ao-JV5" sceneMemberID="viewController">
+                <navigationController id="cb5-Ao-JV5" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="e5K-sh-ZP5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -82,7 +82,7 @@
             </objects>
             <point key="canvasLocation" x="1308" y="400"/>
         </scene>
-        <!--Create Root View Controller-->
+        <!--Welcome-->
         <scene sceneID="qhr-At-TaN">
             <objects>
                 <viewController id="WmY-py-IHB" customClass="CreateRootViewController" customModule="CP_Assignment_1" customModuleProvider="target" sceneMemberID="viewController">
@@ -97,7 +97,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="OHY-m8-tff"/>
+                    <navigationItem key="navigationItem" title="Welcome" id="OHY-m8-tff"/>
                     <connections>
                         <segue destination="31p-h2-6uU" kind="push" identifier="firstSegue" id="r35-iq-a9u"/>
                     </connections>
@@ -106,7 +106,7 @@
             </objects>
             <point key="canvasLocation" x="1712" y="400"/>
         </scene>
-        <!--Create Account View Controller-->
+        <!--Sign Up-->
         <scene sceneID="aX7-bY-jLP">
             <objects>
                 <viewController id="31p-h2-6uU" customClass="CreateAccountViewController" sceneMemberID="viewController">
@@ -133,12 +133,6 @@
                                     <segue destination="bWu-QB-wrc" kind="modal" id="Zli-Sp-TpG"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="N7g-sn-F1T" userLabel="First Name">
-                                <rect key="frame" x="112" y="87" width="188" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="Wdg-Iz-mfL" userLabel="Last Name">
                                 <rect key="frame" x="112" y="131" width="188" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -157,10 +151,22 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="N7g-sn-F1T" userLabel="First Name">
+                                <rect key="frame" x="112" y="87" width="188" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="qUl-1b-Qrj"/>
+                    <navigationItem key="navigationItem" title="Sign Up" id="qUl-1b-Qrj">
+                        <barButtonItem key="rightBarButtonItem" title="Create" id="pox-dy-zF0">
+                            <connections>
+                                <segue destination="0Ie-gg-pyn" kind="modal" id="UeO-iq-rks"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lC7-qI-lCN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -225,10 +231,10 @@
             </objects>
             <point key="canvasLocation" x="848" y="1072"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Sign In Navigation Controller-->
         <scene sceneID="moc-x4-X6R">
             <objects>
-                <navigationController navigationBarHidden="YES" id="144-hB-5oD" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="144-hB-5oD" userLabel="Sign In Navigation Controller" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="kdc-Rp-ekn"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="awd-rL-TPg">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -281,9 +287,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yWa-5C-Ewj">
                                 <rect key="frame" x="12" y="107" width="51" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <segue destination="AFL-AM-OIY" kind="modal" id="c8B-mx-7we"/>
-                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="mAs-j2-YR5" userLabel="Email Text Field">
                                 <rect key="frame" x="112" y="106" width="140" height="30"/>
@@ -297,6 +300,26 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <navigationBar contentMode="scaleToFill" id="HgD-nZ-Y38">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Dropbox" id="7xY-wO-cf8">
+                                        <barButtonItem key="rightBarButtonItem" title="Sign In" id="Vaq-Ny-ECF">
+                                            <connections>
+                                                <segue destination="8Y9-ls-T0s" kind="modal" id="gWo-dJ-iDz"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Xw1-Bk-VFG">
+                                <rect key="frame" x="46" y="197" width="254" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="JM5-cy-gDj" kind="modal" id="Ea5-zi-haF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -306,7 +329,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mah-z7-12R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2141" y="1072"/>
+            <point key="canvasLocation" x="2095" y="1072"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="jgO-1Y-sFz">
@@ -475,10 +498,10 @@
             </objects>
             <point key="canvasLocation" x="3691" y="400"/>
         </scene>
-        <!--Create Account View Controller-->
+        <!--Confirm Create Account View Controller-->
         <scene sceneID="0Fg-Vi-Vjn">
             <objects>
-                <viewController id="0Ie-gg-pyn" customClass="CreateAccountViewController" sceneMemberID="viewController">
+                <viewController id="0Ie-gg-pyn" userLabel="Confirm Create Account View Controller" customClass="CreateAccountViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sIO-Mw-VEZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -645,23 +668,23 @@
             <objects>
                 <viewController id="yJs-xh-CNv" customClass="SettingsNewViewController" customModule="CP_Assignment_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oY1-P2-sCm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="hOg-Sb-tQJ">
-                                <rect key="frame" x="0.0" y="65" width="328" height="1000"/>
+                                <rect key="frame" x="0.0" y="0.0" width="328" height="900"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="settings" id="CrK-sx-Gqc">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="772"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4Pq-B9-WrS">
-                                        <rect key="frame" x="41" y="699" width="238" height="30"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aZP-8k-8Qy">
+                                        <rect key="frame" x="18" y="699" width="268" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <segue destination="WmY-py-IHB" kind="modal" id="guw-Cl-mX2"/>
+                                            <segue destination="144-hB-5oD" kind="modal" id="8ey-mE-aKh"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -671,9 +694,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="zeZ-5I-XL1"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="1000"/>
+                    <size key="freeformSize" width="320" height="900"/>
                     <connections>
-                        <outlet property="settingsScrollView" destination="hOg-Sb-tQJ" id="2Xu-Ka-LgI"/>
+                        <outlet property="scrollView" destination="hOg-Sb-tQJ" id="jDJ-tY-IhP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xfb-9P-NYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -726,12 +749,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="existing_files_1" id="Svk-Vz-RFR">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="454"/>
+                                <rect key="frame" x="0.0" y="13" width="320" height="454"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Apt-JA-vF5">
-                                <rect key="frame" x="20" y="462" width="108" height="25"/>
+                                <rect key="frame" x="0.0" y="466" width="320" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="200" maxY="0.0"/>
                                 <state key="normal" title="  Favorite" image="favorite_btn">
                                     <color key="titleColor" red="0.058823529409999999" green="0.63529411759999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -1045,10 +1069,11 @@
         <image name="welcome3" width="320" height="568"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WaF-W8-AjJ"/>
-        <segue reference="MYr-3S-l4V"/>
-        <segue reference="mZu-o9-7TN"/>
-        <segue reference="JEr-OP-6Hh"/>
-        <segue reference="guw-Cl-mX2"/>
+        <segue reference="gWo-dJ-iDz"/>
+        <segue reference="uV6-GI-sqg"/>
+        <segue reference="IAR-OW-Z0P"/>
+        <segue reference="UeO-iq-rks"/>
+        <segue reference="Zli-Sp-TpG"/>
+        <segue reference="Ea5-zi-haF"/>
     </inferredMetricsTieBreakers>
 </document>
